--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.4",
+    "@types/react": "^18.0.16",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "prop-types": "^15.8.1",
@@ -20,6 +26,7 @@
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
