--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.4",
     "@types/react": "^18.0.16",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/socket.io-client": "^3.0.0",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
