--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "clsx": "^1.2.1",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.3",
     "firebase-admin": "^11.0.1",
